# SKRoot-linuxKernelRoot

SKManager/: build.gradle  settings.gradle
SKManager/app/: build.gradle
SKManager/app/src/androidTest/java/cn/tinyhai/skmanager/: ExampleInstrumentedTest.kt
SKManager/app/src/main/: AndroidManifest.xml
SKManager/app/src/main/assets/: su
SKManager/app/src/main/java/cn/tinyhai/skmanager/: SKManager.kt
SKManager/app/src/main/java/cn/tinyhai/skmanager/ui/: MainActivity.kt  Route.kt
SKManager/app/src/main/java/cn/tinyhai/skmanager/ui/component/: Dialog.kt
SKManager/app/src/main/java/cn/tinyhai/skmanager/ui/composelocal/: DialogHost.kt  SnackbarHost.kt
SKManager/app/src/main/java/cn/tinyhai/skmanager/ui/screen/: SettingsScreen.kt  SuperuserScreen.kt
SKManager/app/src/main/java/cn/tinyhai/skmanager/ui/theme/: Color.kt  Theme.kt  Type.kt
SKManager/app/src/main/java/cn/tinyhai/skmanager/ui/util/: HanziToPinyin.java
SKManager/app/src/main/java/cn/tinyhai/skmanager/util/: AM.kt  SKCli.kt  SKRoot.kt  SPUtils.kt  Shell.kt
SKManager/app/src/main/res/values/: strings.xml  themes.xml
SKManager/app/src/test/java/cn/tinyhai/skmanager/: ExampleUnitTest.kt
SKManager/gradle/wrapper/: gradle-wrapper.properties
sk_cli/: Cargo.toml
sk_cli/src/: cli.rs  inject.rs  main.rs  process_wrapper.rs  ptrace_wrapper.rs
sk_patch/: .gitignore  Cargo.toml
sk_patch/src/: asm_helper.rs  hook.rs  main.rs  patcher.rs
sk_root/: Cargo.toml  cross_build.sh
sk_root/src/: deps.rs  encrypt.rs  lib.rs  main.rs  root.rs  utils.rs
(+2 files in other folders)
