[package]
name = "sk_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sk_root = { path = "../sk_root" }
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"
paste = "1.0.12"
time = { version = "0.3.20", features = ["local-offset"] }
base64 = "0.21.0"
libc = "0.2.140"
log = "0.4.17"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.13.1"

[profile.release]
strip = true
opt-level = "z"
lto = true