[package]
name = "sk_root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
libc = "0.2.140"
base64 = "0.21.0"
rand = "0.8.5"
# chrono = "0.4.24" # Date and Time for 
time = { version = "0.3.20", features = ["local-offset"] }
paste = "1.0.12"
getopts = "0.2.21"
log = "0.4.17"

android-properties = { version = "0.2.2", features = ["bionic-deprecated"] }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.13.1"

[lib]
name = "sk_root"
path = "src/lib.rs"

[[bin]]
name = "su"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
